# PENLive

./: GITHUB-UPLOAD-GUIDE.md  QUICK_START.md  README.md  build-windows.bat  package-lock.json  package.json  vite.config.js
.github/workflows/: build-windows.yml
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/modules/: advanced-drawing.js  audio-mixer.js  audio.js  autosave.js  boardcolor.js  browser.js  command-palette.js  cursorfx.js  dockable.js  drawing.js  dynamic-toolbar.js  fileviewer.js  hotkeys.js  i18n.js  imageimport.js  liveclass.js  overlay.js  pdfexport.js  recording-enhancements.js  recording.js  scenes.js  smartboard.js  snipping.js  splash.js  statistics.js  sysinfo.js  templates.js  theme.js  toast.js  ux.js  videodrop.js  webcam.js  windowcontrols.js
src/styles/: advanced.css  command-palette.css  dockable.css  dynamic-toolbar.css  main.css  overlay.css  panels.css  professional.css  toolbar.css  ux-improvements.css  window-controls.css
